# Study

Algirithms/Lab1/: README.md
Algirithms/Lab1/doc/: PiAA_1.docx  input.txt
Algirithms/Lab1/forms/: mainwindow.ui
Algirithms/Lab1/include/: bintree.h  edge.h  mainwindow.h  ui_mainwindow.h
Algirithms/Lab1/src/: edge.cpp  graphwidget.cpp  mainwindow.cpp  node.cpp
Algirithms/Lab2/: README.md
Algirithms/Lab2/Qtfiles/: Gamilton.pro
Algirithms/Lab2/doc/: PiAA_2.docx  input.txt
Algirithms/Lab2/forms/: mainwindow.ui
Algirithms/Lab2/include/: bintree.h  graphwidget.h  mainwindow.h  node.h  ui_mainwindow.h
Algirithms/Lab2/src/: bintree.cpp  edge.cpp  main.cpp  mainwindow.cpp
Algirithms/Lab3&4/: README.md
Algirithms/Lab3&4/Qtfiles/: L34.pro
Algirithms/Lab3&4/documents/: ПиАА_3.docx  ПиАА_4.docx
Algirithms/Lab3&4/documents/Examples/: DeicstraExample  LipskyExample1.txt  LipskyExample2.txt  SimpleExample
Algirithms/Lab3&4/forms/: aboutwindow.ui  mainwindow.ui
Algirithms/Lab3&4/include/: aboutwindow.h  edge.h  graph.h  graphwidget.h  helpbrowser.h  mainwindow.h  node.h  scene.h
Algirithms/Lab3&4/resources/: myfoto.qrc  res.qrc
Algirithms/Lab3&4/resources/doc/: alg.htm  context.htm  control.htm  files.htm  form.htm  graph.htm  index.htm
Algirithms/Lab3&4/src/: edge.cpp  graph.cpp  graphwidget.cpp  main.cpp  mainwindow.cpp  node.cpp  scene.cpp
Algirithms/Lab5/: CMakeLists.txt  README.md
Algirithms/Lab5/doc/: EffTest.txt  R5.doc
Algirithms/Lab5/include/: algorithm.h
Algirithms/Lab5/scripts/: BuildAndAllTests.sh  BuildAndRunTests.sh  BuildAndShiftTest.sh  build.sh  reset.sh
Algirithms/Lab5/src/: KMPtest.cpp  Lab5_EFF.cpp  Lab5_KMP.cpp  Lab5_SHIFT.cpp  SHIFTtest.cpp  algorithm.cpp
Algirithms/Lab6/: CMakeLists.txt  README.md
Algirithms/Lab6/doc/: R6.doc
Algirithms/Lab6/include/: AC_base.h  AC_joker.h  algorithm.h  modifiedALG.h
Algirithms/Lab6/scripts/: BuildAndAllTests.sh  buid.sh  build.sh
Algirithms/Lab6/src/: AC_base.cpp  AC_joker.cpp  ACtest.cpp  JOtest.cpp  Lab6_AC.cpp  Lab6_JO.cpp  algorithm.cpp  modifiedALG.cpp
OOP/: README.md
OOP/Vector&List/include/: list.hpp
OOP/Vector&List/src/: main.cpp
OOP/shared_ptr/src/: main.cpp
